@@ -11,6 +11,8 @@
 #                                                                       #
 #########################################################################
 
+# FIXME reduce redundancy by including ../Makefile
+
 include ../../config/Makefile
 
 CC=$(BYTECC)
@@ -19,7 +21,7 @@ ROOTDIR=../..
 CAMLC=$(ROOTDIR)/boot/ocamlrun $(ROOTDIR)/ocamlc -nostdlib \
       -I $(ROOTDIR)/stdlib -I $(ROOTDIR)/otherlibs/unix
 MKLIB=../../boot/ocamlrun ../../tools/ocamlmklib
-COMPFLAGS=-w +33..39 -warn-error A -bin-annot -safe-string
+COMPFLAGS=-w +33..39 -warn-error A -bin-annot -g -safe-string
 
 C_OBJS=scheduler.o
 
