@@ -64,6 +64,7 @@ Bug fixes:
 - PR#6775: Digest.file leaks file descriptor on error
   (Valentin Gatien-Baron)
 - PR#6787: Soundness bug with polymorphic variants
+- PR#6790: otherlibs should be built with -g
 - GPR#143: fix getsockopt behaviour for boolean socket options
   (Anil Madhavapeddy and Andrew Ray)
 - ocamlbuild on cygwin cannot find ocamlfind
